--- a/pdm-05.ioc
+++ b/pdm-05.ioc
@@ -1,21 +1,43 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.ContinuousConvMode=ENABLE
+ADC.DMAContinuousRequests=ENABLE
+ADC.IPParameters=ContinuousConvMode,DMAContinuousRequests,SamplingTime
+ADC.SamplingTime=ADC_SAMPLETIME_239CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN.CalculateBaudRate=166666
-CAN.CalculateTimeBit=6000
-CAN.CalculateTimeQuantum=2000.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN.BS1=CAN_BS1_13TQ
+CAN.BS2=CAN_BS2_2TQ
+CAN.CalculateBaudRate=1000000
+CAN.CalculateTimeBit=1000
+CAN.CalculateTimeQuantum=62.5
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,NART,Prescaler,BS2,BS1
+CAN.NART=ENABLE
+CAN.Prescaler=3
+Dma.ADC.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC.0.Instance=DMA1_Channel1
+Dma.ADC.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC.0.Mode=DMA_CIRCULAR
+Dma.ADC.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC
+Dma.RequestsNb=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F042C6T7
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=CAN
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP2=DMA
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -60,8 +82,9 @@ Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
-MxCube.Version=6.12.1
-MxDb.Version=DB.6.0.121
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -79,7 +102,7 @@ PA1.Locked=true
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=V12 NP Signal
+PA10.GPIO_Label=Reset
 PA10.Locked=true
 PA10.Signal=GPIO_Output
 PA11.Locked=true
@@ -156,8 +179,10 @@ PB11.Signal=S_TIM2_CH4
 PB12.Locked=true
 PB12.Signal=SPI2_NSS
 PB13.Locked=true
+PB13.Mode=RX_Only_Simplex_Unidirect_Master
 PB13.Signal=SPI2_SCK
 PB14.Locked=true
+PB14.Mode=RX_Only_Simplex_Unidirect_Master
 PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Signal=SPI2_MOSI
@@ -206,6 +231,7 @@ PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -234,15 +260,27 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_CAN_Init-CAN-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true
+RCC.AHBFreq_Value=48000000
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=48000000
 RCC.CECFreq_Value=32786.88524590164
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=48000000
+RCC.HSE_VALUE=24000000
 RCC.HSICECFreq_Value=32786.88524590164
-RCC.IPParameters=CECFreq_Value,FamilyName,HSICECFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value,VCOOutput2Freq_Value
-RCC.PLLCLKFreq_Value=16000000
-RCC.PLLMCOFreq_Value=16000000
-RCC.TimSysFreq_Value=8000000
-RCC.VCOOutput2Freq_Value=8000000
+RCC.I2SFreq_Value=48000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=48000000
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMCOFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=48000000
+RCC.USART1Freq_Value=48000000
+RCC.VCOOutput2Freq_Value=24000000
 SH.S_TIM16_CH1.0=TIM16_CH1
 SH.S_TIM16_CH1.ConfNb=1
 SH.S_TIM17_CH1.0=TIM17_CH1
@@ -255,6 +293,13 @@ SH.S_TIM3_CH1.0=TIM3_CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2
 SH.S_TIM3_CH2.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI2.CalculateBaudRate=12.0 MBits/s
+SPI2.DataSize=SPI_DATASIZE_16BIT
+SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
