--- a/pdm-05.ioc
+++ b/pdm-05.ioc
@@ -37,53 +37,53 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI2
 Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
-Mcu.Pin1=PC14OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB2
-Mcu.Pin16=PB10
-Mcu.Pin17=PB11
-Mcu.Pin18=PB12
-Mcu.Pin19=PB13
-Mcu.Pin2=PC15OSC32_OUT
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PA15
-Mcu.Pin3=PF0-OSC_IN
-Mcu.Pin30=PB3
-Mcu.Pin31=PB4
-Mcu.Pin32=PB5
-Mcu.Pin33=PB6
-Mcu.Pin34=PB7
-Mcu.Pin35=PB8
-Mcu.Pin36=PB9
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA0
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
-Mcu.PinsNb=38
+Mcu.Pin1=PF0-OSC_IN
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
+Mcu.Pin2=PF1-OSC_OUT
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PA15
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
+Mcu.Pin3=PA0
+Mcu.Pin30=PB5
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=PB8
+Mcu.Pin34=PB9
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
+NVIC.CEC_CAN_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -179,12 +179,13 @@ PB11.Signal=S_TIM2_CH4
 PB12.Locked=true
 PB12.Signal=SPI2_NSS
 PB13.Locked=true
-PB13.Mode=RX_Only_Simplex_Unidirect_Master
+PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
 PB14.Locked=true
-PB14.Mode=RX_Only_Simplex_Unidirect_Master
+PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=V12 NP Signal
@@ -194,8 +195,12 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=F1R Signal
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=F1R pwm
 PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=F2R pwm
 PB5.Locked=true
 PB5.Signal=S_TIM3_CH2
 PB6.GPIOParameters=GPIO_Label
@@ -206,22 +211,18 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=F1L Signal
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=WPL pwm
 PB8.Locked=true
 PB8.Signal=S_TIM16_CH1
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=WPR pwm
 PB9.Locked=true
 PB9.Signal=S_TIM17_CH1
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=Ecu Signal
 PC13.Locked=true
 PC13.Signal=GPIO_Output
-PC14OSC32_IN.GPIOParameters=GPIO_Label
-PC14OSC32_IN.GPIO_Label=LED1
-PC14OSC32_IN.Locked=true
-PC14OSC32_IN.Signal=GPIO_Output
-PC15OSC32_OUT.GPIOParameters=GPIO_Label
-PC15OSC32_OUT.GPIO_Label=LED2
-PC15OSC32_OUT.Locked=true
-PC15OSC32_OUT.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -260,7 +261,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -289,17 +290,22 @@ SH.S_TIM2_CH3.0=TIM2_CH3
 SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4
 SH.S_TIM2_CH4.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI2.CalculateBaudRate=12.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_16BIT
-SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM3.Period=1000-1
+TIM3.Prescaler=960-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
