ADC, Timers y PWMs funcionando

--- a/pdm-05.ioc
+++ b/pdm-05.ioc
@@ -98,6 +98,8 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=Altrnator Sens
 PA0.Locked=true
@@ -268,7 +270,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM17_Init-TIM17-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM17_Init-TIM17-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -309,15 +311,16 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-Output Compare1 No Output,Period
+TIM1.IPParameters=Channel-Output Compare1 No Output,Period,Prescaler
 TIM1.Period=48000
+TIM1.Prescaler=999
 TIM16.Channel=TIM_CHANNEL_1
 TIM16.IPParameters=Channel,Prescaler,Period
 TIM16.Period=100
 TIM16.Prescaler=3170
 TIM17.Channel=TIM_CHANNEL_1
 TIM17.IPParameters=Channel,Period,Prescaler
-TIM17.Period=160
+TIM17.Period=100
 TIM17.Prescaler=3170
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
