--- a/pdm-05.ioc
+++ b/pdm-05.ioc
@@ -24,7 +24,27 @@ Dma.ADC.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC
-Dma.RequestsNb=1
+Dma.Request1=SPI2_TX
+Dma.Request2=SPI2_RX
+Dma.RequestsNb=3
+Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.2.Instance=DMA1_Channel4
+Dma.SPI2_RX.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.2.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.1.Instance=DMA1_Channel5
+Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.1.Mode=DMA_CIRCULAR
+Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -92,10 +112,12 @@ MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.CEC_CAN_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel4_5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -185,8 +207,11 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=F2L pwm
 PB11.Locked=true
 PB11.Signal=S_TIM2_CH4
+PB12.GPIOParameters=PinState,GPIO_Label
+PB12.GPIO_Label=CS
 PB12.Locked=true
-PB12.Signal=SPI2_NSS
+PB12.PinState=GPIO_PIN_SET
+PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -303,8 +328,8 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=12.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI2.CalculateBaudRate=6.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_16BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
