fixed battery ctrl issue, added SPI (got numbers no se si bien )

--- a/pdm-05.ioc
+++ b/pdm-05.ioc
@@ -185,8 +185,10 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=F2L pwm
 PB11.Locked=true
 PB11.Signal=S_TIM2_CH4
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=CS_PIN
 PB12.Locked=true
-PB12.Signal=SPI2_NSS
+PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -303,8 +305,8 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=12.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CalculateBaudRate=1.5 MBits/s
 SPI2.DataSize=SPI_DATASIZE_16BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
