cofigo funcionando todo menos adc y currect actions

--- a/pdm-05.ioc
+++ b/pdm-05.ioc
@@ -32,8 +32,9 @@ Mcu.CPN=STM32F042C6T7
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=CAN
-Mcu.IP10=TIM16
-Mcu.IP11=TIM17
+Mcu.IP10=TIM14
+Mcu.IP11=TIM16
+Mcu.IP12=TIM17
 Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -42,7 +43,7 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=12
+Mcu.IPNb=13
 Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -76,20 +77,23 @@ Mcu.Pin33=PB8
 Mcu.Pin34=PB9
 Mcu.Pin35=VP_SYS_VS_Systick
 Mcu.Pin36=VP_TIM1_VS_no_output1
-Mcu.Pin37=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM14_VS_no_output1
+Mcu.Pin39=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin4=PA1
+Mcu.Pin40=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=39
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
+NVIC.ADC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.CEC_CAN_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -98,6 +102,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
@@ -272,7 +277,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM17_Init-TIM17-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM17_Init-TIM17-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -316,6 +321,10 @@ TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-Output Compare1 No Output,Period,Prescaler
 TIM1.Period=48000
 TIM1.Prescaler=999
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel,Period,Prescaler
+TIM14.Period=48000
+TIM14.Prescaler=2000
 TIM16.Channel=TIM_CHANNEL_1
 TIM16.IPParameters=Channel,Prescaler,Period
 TIM16.Period=100
@@ -336,6 +345,10 @@ TIM3.Period=1000
 TIM3.Prescaler=959
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM14_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM14_VS_no_output1.Signal=TIM14_VS_no_output1
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
